# soli-python

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  config.json  pyproject.toml
.github/workflows/: CI.yml
docker/: build.sh  clean_test.sh
docker/ubuntu2204-install/: Dockerfile
docker/ubuntu2404-build/: Dockerfile
docker/ubuntu2404-install/: Dockerfile
docs/: conf.py  contributing.md  examples.md  index.md  requirements.txt
docs/soli/: config.md  graph.md  logger.md  models.md
examples/: basic_graph.py  basic_search.py  basic_taxonomy.py  basic_traversal.py  basic_triples.py  initialize_client.py  llm_search.py
soli/: __init__.py  config.py  graph.py  logger.py  models.py
tests/: test_soli.py
